# vulkan_triangle

./: CMakeLists.txt
cmake/: CompileShaders.cmake  CompilerSettings.cmake  Dependencies.cmake
include/: Window.hh  WindowManager.hh
shaders/: main.frag  main.vert
src/: Window.cc  WindowManager.cc  vulkan_triangle.cc
